# Waggle-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: check-label-refs.yml  ci.yml  hol-plugin-scanner.yml  package-claude-desktop-extension.yml  publish-image.yml  publish-vscode-extension.yml  release-binaries.yml  release-codex-plugin-runtime.yml  sync-labels.yml
apps/vscode-extension/: package-lock.json  package.json
benchmark_results/: rlm_style_waggle_results.csv  rlm_style_waggle_results.md  rlm_style_waggle_summary.json
benchmarks/: plot_rlm_results.py  run_full_benchmark.py
benchmarks/fixtures/: comparative_eval.json
docs/: codex-plugin-runtime.md  reference.md
docs/install/: README.md  codex-marketplace-release-checklist.md  codex.md  troubleshooting.md
scripts/: bench_connection_pool.py  build_codex_plugin_runtime.py  check_extension_metadata.py  demo_recording_flow.py  export_onnx.py  package_codex_plugin.py
src/waggle/: __init__.py  abhi.py  code_extraction.py  connection_pool.py  embeddings.py  graph.py  intelligence.py  models.py  neo4j_graph.py  orchestrator.py  recursive_context.py  server.py
tests/: test_abhi_diff_merge.py  test_code_extraction.py  test_connection_pool.py  test_demo.py  test_distribution_cli.py  test_embeddings.py  test_extension_metadata_check.py  test_graph.py  test_hybrid_retrieval.py  test_orchestrator_bounded_cache.py  test_package_codex_plugin.py  test_packaging_metadata.py  test_platform.py  test_recursive_context.py  test_server.py  test_stdio_integration.py
(+29 files in other folders)
